DTPS/UniTwin/03-unitwin.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unitwin
  labels:
    app: unitwin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: unitwin
  template:
    metadata:
      labels:
        app: unitwin
    spec:
      containers:
        - name: unitwin
          image: unitwin:latest
          imagePullPolicy: Never
          ports:
            - name: web
              containerPort: 7000
