DTPS/UniTwin/03-unitwin-services.yml
apiVersion: v1
kind: Service
metadata:
  name: unitwin

spec:
  ports:
    - name: web
      port: 7000
      targetPort: web

  selector:
    app: unitwin
