DTPS/UniTwin/04-unitwin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unitwin-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/unitwin"
        pathType: Prefix
        backend:
          service:
            name: unitwin
            port:
              name: web
